<resources>
    <string name="app_name">FilmToGo</string>
    <string name="app_title">FILM TO GO</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="main_login_image">Main Login Image</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="log_in_btn">Log in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="get_premium">Get Premium!</string>
    <string name="premium_icon">Premium icon</string>
    <string name="arrow_right_icon">arrow right icon</string>
    <string name="downloads">Downloads</string>
    <string name="downloads_icon">downloads icon</string>
    <string name="favorite">Favorites</string>
    <string name="billing_information">Billing Information</string>
    <string name="favorites_icon">favorites icon</string>
    <string name="change_subscription">Change Subscription</string>
    <string name="subscription_icon">subscription icon</string>
    <string name="save">SAVE</string>
    <string name="let_s_setup_your_profile">Let\'s setup your profile!</string>
    <string name="splash_image">splash image</string>
    <string name="choose_your_subscription">Choose your subscription:</string>
    <string name="card_number">5431 1111 1111 1111</string>
    <string name="expires_on">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="continue1">Continue</string>
    <string name="movie_poster">Movie poster</string>
    <string name="Play">Play</string>
    <string name="download">Download</string>
    <string name="cast">Cast:</string>
    <string name="edit_profile">edit profile</string>
    <string name="hello_new_user">Hello New user!</string>
    <string name="welcome_message">Hello, %1$s</string>
    <string name="holder">Card Holder</string>
    <string name="movie_title">Movie Title</string>
    <string name="select_a_minimum_of_3">Select a minimum of 3 :</string>
    <string name="movie_year">2022</string>
    <string name="movie_rating">6.5</string>
    <string name="forward">forward</string>
    <string name="rewind">rewind</string>
    <string name="play_pause">play_pause</string>
    <string name="movie_duration">00:00</string>
    <string name="movie_is_playing">Movie is playing</string>
    <string name="recommended_movies">Recommended Movies</string>
    <string name="search_by_genre">Search By Genre</string>
    <string name="back_button">back button</string>
    <string name="movie_search_results">Movie Search Results</string>
    <string name="update">Update</string>
    <string name="share">share</string>
    <string name="no_results_from_your_search">No results from your search</string>
    <string name="unable_to_display_content_please_check_your_network_connection">Unable to display content. Please check your network connection.</string>
    <string name="add_your_billing_info">Add your billing info:</string>
    <string name="card_image">Card image</string>
    <string name="en">EN</string>
    <string name="_2023">2023</string>
    <string name="delete_all">Delete All</string>

</resources>