<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkest">

        <ImageView
            android:layout_width="300sp"
            android:layout_height="300sp"
            android:layout_gravity="center"
            android:layout_marginTop="26sp"
            android:src="@drawable/login"
            android:contentDescription="@string/main_login_image"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="12sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:fontFamily="@font/kanitbold"
            android:textSize="34sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:fontFamily="@font/kanitmedium"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:layout_marginStart="26sp"
            android:layout_marginTop="18sp"/>

        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@drawable/edit_shape"
            android:hint="@string/email"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColorHint= "@color/blue_light"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/blue_light"
            android:layout_marginStart="26sp"
            android:layout_marginEnd="26sp"
            android:layout_marginBottom="16sp"
            android:layout_marginTop="16sp"
            />
        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@drawable/edit_shape"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColorHint= "@color/blue_light"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/blue_light"
            android:inputType="textPassword"
            android:layout_marginStart="26sp"
            android:layout_marginEnd="26sp"
            android:layout_marginBottom="16sp"/>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@drawable/btn_shape"
            android:layout_marginStart="26sp"
            android:layout_marginEnd="26sp"
            android:layout_marginBottom="16sp"
            android:text="@string/log_in_btn"
            android:fontFamily="@font/kanitmedium"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/kanitregular"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="16sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
