<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkest">

        <TextView
            android:id="@+id/hello_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:fontFamily="@font/kanitbold"
            android:text="@string/hello_new_user"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/splash_image"
            android:layout_width="250sp"
            android:layout_height="250sp"
            android:contentDescription="@string/splash_image"
            android:src="@drawable/splash"
            app:layout_constraintBottom_toTopOf="@+id/profile_setup_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hello_user" />

        <TextView
            android:id="@+id/profile_setup_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="401dp"
            android:fontFamily="@font/kanitbold"
            android:text="@string/let_s_setup_your_profile"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/hello_user" />

        <Button
            android:id="@+id/continue_btn"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/btn_shape"
            android:fontFamily="@font/kanitmedium"
            android:text="@string/continue1"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_setup_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>