<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkest"
        android:columnCount="2">

        <TextView
            android:id="@+id/add_edit_billing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_columnSpan="2"
            android:fontFamily="@font/kanitbold"
            android:text="Add your billing info:"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="28sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_columnSpan="2"
            android:src="@drawable/debitcard"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="16sp"/>
        <EditText
            android:id="@+id/card_number"
            android:layout_columnSpan="2"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:background="@drawable/edit_shape"
            android:hint="@string/card_number"
            android:textSize="20sp"
            android:inputType="number"
            android:textColorHint= "@color/blue_light"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/blue_light"
            android:layout_marginStart="26sp"
            android:layout_marginEnd="26sp"/>

        <EditText
            android:id="@+id/cardholder"
            android:layout_columnSpan="2"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:background="@drawable/edit_shape"
            android:hint="@string/holder"
            android:textSize="20sp"
            android:textColorHint= "@color/blue_light"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/blue_light"
            android:layout_marginStart="26sp"
            android:layout_marginEnd="26sp"
            android:layout_marginTop="16sp"/>

        <EditText
            android:id="@+id/cardDate"
            android:layout_columnSpan="1"
            android:layout_width="0dp"
            android:layout_height="70sp"
            android:background="@drawable/edit_shape"
            android:hint="@string/expires_on"
            android:textSize="20sp"
            android:textColorHint="@color/blue_light"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/blue_light"
            android:layout_marginStart="26sp"
            android:layout_marginTop="16sp"
            android:layout_columnWeight="0.5" />

        <EditText
            android:id="@+id/cardCVV"
            android:layout_columnSpan="1"
            android:layout_width="0dp"
            android:layout_height="70sp"
            android:background="@drawable/edit_shape"
            android:hint="@string/cvv"
            android:inputType="number"
            android:textSize="20sp"
            android:textColorHint="@color/blue_light"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/blue_light"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="26sp"
            android:layout_marginTop="16sp"
            android:layout_columnWeight="0.5" />

        <Button
            android:id="@+id/save_btn"
            android:layout_columnSpan="2"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@drawable/btn_shape"
            android:layout_marginStart="26sp"
            android:layout_marginEnd="26sp"
            android:layout_marginTop="26sp"
            android:text="@string/save"
            android:fontFamily="@font/kanitmedium"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </GridLayout>
</layout>