<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkest">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/darkest"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16sp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back_button"/>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_btn">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkest">

                <ImageView
                    android:id="@+id/movie_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/movie_poster"
                    android:src="@drawable/baseline_no_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movieTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/kanitsemibold"
                    android:text="@string/movie_title"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_image" />

                <ImageButton
                    android:id="@+id/favorites_icon_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/darkest"
                    android:contentDescription="@string/favorites_icon"
                    android:src="@drawable/baseline_favorite_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/CustomRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movieTitle" />


                <TextView
                    android:id="@+id/movie_original_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/kanitsemibold"
                    android:text="@string/en"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@+id/favorites_icon_btn"
                    app:layout_constraintHorizontal_bias="0.125"
                    app:layout_constraintStart_toEndOf="@+id/movieYear"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

                <TextView
                    android:id="@+id/movieYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/kanitsemibold"
                    android:text="@string/_2023"
                    android:textColor="@color/red_orange"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@+id/favorites_icon_btn"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

                <Button
                    android:id="@+id/download_btn"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/btn_shape"
                    android:fontFamily="@font/kanitmedium"
                    android:text="@string/download"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/play_btn"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movieYear"
                    app:layout_constraintWidth_percent="0.45" />

                <Button
                    android:id="@+id/play_btn"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/btn_shape"
                    android:fontFamily="@font/kanitmedium"
                    android:text="@string/Play"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_original_language"
                    app:layout_constraintWidth_percent="0.45" />


                <TextView
                    android:id="@+id/movie_Description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/kanitregular"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/play_btn" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>